--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,3 +38,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest .
+    - name: Build Package
+      run: |
+        python -m build
