--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -16,7 +16,7 @@ permissions:
   contents: read
 
 jobs:
-  release-build:
+  release-build-CI:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,33 +26,34 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Download Package
-        uses: actions/download-artifact@v5.0.0
-        with:
-          name: wheel-dist-3.10
-          path: ./movie_etl/dist/*.whl
-          
-          
+      - name: Build release distributions
+        run: |
+          python -m pip install build wheel
+      
+      - name: Build Package
+        working-directory: ./movie_etl
+        run: |
+          python -m build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
         with:
-          name: release-dists
+          name: wheel-dist-3.10
           path: ./movie_etl/dist/*.whl
 
-  pypi-publish:
+  release-upload-CD:
     runs-on: ubuntu-latest
     needs:
-      - release-build
+      - release-build-CI
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
 
     steps:
-      - name: Retrieve release distributions
-        uses: actions/download-artifact@v4
+      - name: Download Package
+        uses: actions/download-artifact@v5.0.0
         with:
-          name: release-dists
+          name: wheel-dist-3.10
           path: ./movie_etl/dist/*.whl
 
       - name: Publish release distributions to PyPI
