--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -45,6 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - release-build-CI
+    environment: testpypi
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
