--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -62,4 +62,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: ./movie_etl/dist/*.whl
-          repository-url: https://test.pypi.org/legacy/
+          repository-url: https://test.pypi.org
