[fix] package path

--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -61,5 +61,5 @@ jobs:
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: ./movie_etl/dist/*.whl
+          packages-dir: ./movie_etl/dist/
           repository-url: https://test.pypi.org/legacy/
