--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -46,7 +46,9 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - release-build-CI
-    environment: testpypi
+    environment: 
+      name: testpypi
+      url: https://test.pypi.org/project/UVG-MLOPS/
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
