--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -65,3 +65,4 @@ jobs:
         with:
           packages-dir: ./movie_etl/dist/
           repository-url: https://test.pypi.org/legacy/
+          verbose: true
