--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -63,6 +63,6 @@ jobs:
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: ./movie_etl/dist/
+          packages-dir: ./movie_etl/dist/*
           repository-url: https://test.pypi.org/legacy/
           verbose: true
