[add] attestations to workflow

--- a/.github/workflows/python-publish-v2.yml
+++ b/.github/workflows/python-publish-v2.yml
@@ -66,3 +66,4 @@ jobs:
           packages-dir: ./movie_etl/dist/*
           repository-url: https://test.pypi.org/legacy/
           verbose: true
+          attestations: true
